# LAB--04

.github/workflows/: build.yml  main.yml
formatter_ex_lib/: CMakeLists.txt
formatter_ex_lib/bins/: CMakeCache.txt  Makefile  cmake_install.cmake
formatter_lib/: CMakeLists.txt
hello_world/: CMakeCache.txt  CMakeLists.txt
hello_world/bins/: CMakeCache.txt  Makefile  cmake_install.cmake
solver/: CMakeLists.txt
solver/bins/: CMakeCache.txt  Makefile  cmake_install.cmake
solver_lib/: CMakeLists.txt
solver_lib/bins/: CMakeCache.txt  Makefile  cmake_install.cmake
